<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_rowWeight="1"
    android:layout_column="@integer/grid_layout_act2_columns"
    tools:context=".Activity2" >

    <Button
        android:id="@+id/button_back_act2"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="1dp"
        android:onClick="backAct2"
        android:text="@string/text_button_back_act1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="411dp"
        android:layout_height="650dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical"
            android:rowCount="7">

            <EditText
                android:id="@+id/edit_weight_area"
                android:layout_width="@dimen/act2_area_width"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView_height"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="5"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/text_height_act2"
                android:textSize="@dimen/act2_elem_text_size" />

            <TextView
                android:id="@+id/textView_weight"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="4"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/text_weight_act2"
                android:textSize="@dimen/act2_elem_text_size" />

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="3"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/text_phone_act2"
                android:textSize="@dimen/act2_elem_text_size" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="195dp"
                android:layout_height="106dp"
                android:layout_row="6"
                android:layout_column="0">

                <Button
                    android:id="@+id/bmi_button"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="33dp"
                    android:layout_marginEnd="27dp"
                    android:text="@string/bmi_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/edit_phone_area"
                android:layout_width="@dimen/act2_area_width"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:ems="10"
                android:inputType="phone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_bmi"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="6"
                android:layout_column="1"
                android:gravity="center"
                android:textSize="@dimen/act2_elem_text_size" />

            <EditText
                android:id="@+id/edit_text_area"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_nuber_area"
                android:layout_width="@dimen/act2_area_width"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_text"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/text_first_act2"
                android:textSize="@dimen/act2_elem_text_size" />

            <TextView
                android:id="@+id/textView_number"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="2"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/text_number_act2"
                android:textSize="@dimen/act2_elem_text_size" />

            <EditText
                android:id="@+id/edit_mail_area"
                android:layout_width="@dimen/act2_area_width"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_mail"
                android:layout_width="@dimen/act2_elem_width"
                android:layout_height="@dimen/act2_elem_height"
                android:layout_row="1"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/text_mail_act2"
                android:textSize="@dimen/act2_elem_text_size" />

            <EditText
                android:id="@+id/edit_height_area"
                android:layout_width="@dimen/act2_area_width"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>